README: Add section on Using --add-modules with --add-exports